# YOLOv8MultiThreads

./: CHANGELOG.md  README.md  postprocess.cc
cpp_0920Ver_highfps_load_20251017/: CMakeLists.txt  main.cc  postprocess.cc  yolov8.h
cpp_0920Ver_highfps_load_20251017/include/: common_utils.h  result_processor.h  video_capture.h
cpp_0920Ver_highfps_load_20251017/include/lib/: libyolov8_tracking.so.1
cpp_0920Ver_highfps_load_20251017/src/: common_utils.cc  model_wrapper.cc  result_processor.cc  tracker_wrapper.cc  video_capture.cc
cpp_qtV_highframe_tracking_0920_noerr/: main.cc
cpp_qtV_highframe_tracking_0920_noerr/include/: model_wrapper.h  video_capture.h
cpp_qtV_highframe_tracking_0920_noerr/include/src/: thread_pool.h
cpp_qtV_highframe_tracking_0920_noerr/rknpu2/: yolov8.cc
cpp_qtV_highframe_tracking_0920_noerr/src/: result_processor.cc  video_capture.cc
include/: common_utils.h  tracker_wrapper.h
include/lib/: libyolov8_tracking.so.1.0.0
thread_pool_/: CMakeLists.txt
thread_pool_/src/: thread_pool.cc
yolov8_tracking_so_/: CMakeLists.txt  README.md  build.sh
yolov8_tracking_so_/include/: tracking.h
yolov8_tracking_so_/src/: botsort_tracker.cpp  hungarian.cpp  kalman_filter.cpp  track.cpp
